log
Sat, Mar 22, 2025  5:44:30 PM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Sat, Mar 22, 2025  6:18:40 PM: 
 exercises.c | 22 +++++++++++++++++-----
 1 file changed, 17 insertions(+), 5 deletions(-)
In file included from test.c:5:0:
exercises.c:70:1: error: "/*" within comment [-Werror=comment]
 /*
  
exercises.c:83:1: error: "/*" within comment [-Werror=comment]
 /*
  
exercises.c:93:1: error: "/*" within comment [-Werror=comment]
 /*
  
exercises.c:100:1: error: unterminated comment
 /*int parentesisBalanceados(char *cadena) {
 ^
test.c: In function 'test_suma_lista':
test.c:100:17: error: implicit declaration of function 'sumaLista' [-Werror=implicit-function-declaration]
     int suma2 = sumaLista(L);
                 ^~~~~~~~~
test.c: In function 'test_elimina_elemento':
test.c:132:5: error: implicit declaration of function 'eliminaElementos' [-Werror=implicit-function-declaration]
     eliminaElementos(L, elem);
     ^~~~~~~~~~~~~~~~
test.c: In function 'test_copia_pila':
test.c:175:5: error: implicit declaration of function 'copia_pila' [-Werror=implicit-function-declaration]
     copia_pila(P1, P2);
     ^~~~~~~~~~
test.c: In function 'test_parentesis_balanceados':
test.c:217:9: error: implicit declaration of function 'parentesisBalanceados' [-Werror=implicit-function-declaration]
     if(!parentesisBalanceados(s)){
         ^~~~~~~~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
55b928c
